--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,109 @@
-$primary-color: #E5E5E5;
+
+$primary-color: #e5e5e5;
+$secondary-color: #6070ff;
+$accent-color: #396df2;
+$heading: #172b4d;
+$color-body: #344563;
+$bg-hero-highlight: url(../dist/img/bg-header.png);
+
+html {
+    /* 62.5% of 16px = 10px */
+    font-size: 62.5%;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    outline: 1px solid red;
+}
+
+/* Typography */
+::selection {
+    background: $secondary-color;
+    color: #fff;
+}
 
 body {
-    background: $primary-color;
+    font-family: 'Poppins', 'Trebuchet MS', sans-serif;
+    // background: $primary-color;
+    color: var($color-body);
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+  }
+
+h1 {
+    line-height: 2.4rem;
+}
+
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    min-height: 5.4rem;
+    padding-left: 2.4rem;
+    padding-right: 3.5rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    font-size: 1.8rem;
+    text-align: center;
+    background: var($secondary-color);
+    font-weight: 700;
+    line-height: 2rem;
+    height: 2rem;
+  }
+  
+  h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 5.2rem;
+    height: 14.7rem;
+  }
+
+  .burger {
+    font-size: 1.3rem;
+  }
+  
+  .burger span {
+    display: block;
+    width: 1.6rem;
+    height: 0.2rem;
+    background: $secondary-color;
+    margin-bottom: 0.4rem;
+  }
+
+  .hero {
+    display: flex;
+    flex-direction: column;
+    padding: 12rem 2.4rem;
+    height: 100%;
+    left: 2.4rem;
+    top: 27.6rem;
+  }
+
+  .social-media {
+    width: 100%;
+    height: 20rem;
+    padding-top: 1rem;
+
+    li {
+        display: inline-block;
+        padding-right: 5%;
+        justify-content: center;
+        padding-left: 0; 
+  }
+  
+}
+
+.container {
+    background-image: var($bg-hero-highlight);
 }
